force-app/main/default/objects/TriggerSetting__c/TriggerSetting__c.object-meta.xml
<CustomObject>
    <description>Contains settings for triggers at run time</description>
    <label>Trigger Setting</label>
    <nameField>
        <label>Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TriggerSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>