force-app/main/default/objects/TriggerSetting__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the trigger is active</description>
    <inlineHelpText>Indicates the trigger is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>