force-app/main/default/objects/TriggerSetting__c/fields/IsAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>IsAfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Execute the after delete method</description>
    <inlineHelpText>Execute the after delete method</inlineHelpText>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>