force-app/main/default/objects/TriggerSetting__c/fields/IsAfterInsert__c.field-meta.xml
<CustomField>
    <fullName>IsAfterInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Execute the after insert method</description>
    <inlineHelpText>Execute the after insert method</inlineHelpText>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>