force-app/main/default/objects/TriggerSetting__c/fields/IsAfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>IsAfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Execute the after undelete method</description>
    <inlineHelpText>Execute the after undelete method</inlineHelpText>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>