force-app/main/default/objects/TriggerSetting__c/fields/IsAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Execute the after update method</description>
    <inlineHelpText>Execute the after update method</inlineHelpText>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>