force-app/main/default/objects/TriggerSetting__c/fields/IsBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>IsBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Execute the before insert method</description>
    <inlineHelpText>Execute the before insert method</inlineHelpText>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>