force-app/main/default/objects/TriggerSetting__c/fields/IsTestMode__c.field-meta.xml
<CustomField>
    <fullName>IsTestMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the trigger should run in test mode</description>
    <inlineHelpText>Indicates if the trigger should run in test mode</inlineHelpText>
    <label>Test Mode</label>
    <type>Checkbox</type>
</CustomField>